--- a/dept-mlops/monitoring/docker-compose.yaml
+++ b/dept-mlops/monitoring/docker-compose.yaml
@@ -43,17 +43,24 @@ services:
       - /:/host:ro,rslave
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.52.1
+    image: gcr.io/cadvisor/cadvisor:latest
     container_name: mon_cadvisor
     restart: unless-stopped
     ports:
       - "8080:8080"
     privileged: true
+    devices:
+      - /dev/kmsg:/dev/kmsg
     volumes:
       - /:/rootfs:ro
-      - /var/run:/var/run:rw
+      - /var/run:/var/run:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - /sys:/sys:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/lib/docker:/var/lib/docker:ro
+    command:
+      - "--housekeeping_interval=10s"
+      - "--docker_only=false"
 
   dcgm_exporter:
     image: nvidia/dcgm-exporter:latest
